--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ div.n-queen {
   text-align: center;
   font-size: 18px;
   font-weight: 500;
-  color: #247ba0;
+  color: #006400;
 }
 
 #n-queen-board {
