--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   position: relative;
   top: -20px;
   width: 100%;
-  background-color: #9ACD32;
+  background-color: black;
   color: #fdfffc;
 }
 
