--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
   position: relative;
   top: -20px;
   width: 100%;
-  background-color: black;
-  color: #000000;
+  background-color: #000000;
+  color: #90ee90;
 }
 
 .header h2 {
